fix(services-hero): 20px gap from CTA to hex via aside flex stack
Move experience into aside after button so grid row height no longer pushes hex down.

--- a/assets/scss/pages/_services-page.scss
+++ b/assets/scss/pages/_services-page.scss
@@ -183,10 +183,8 @@
   position: relative;
   display: grid;
   grid-template-columns: #{mixins.vw(839px)} #{mixins.vw(282px)};
-  grid-template-rows: auto auto;
   justify-content: space-between;
   align-items: start;
-  row-gap: 0;
   padding-top: #{mixins.vw(134px)};
   height: 100%;
 
@@ -330,6 +328,9 @@
   position: relative;
   grid-column: 2;
   grid-row: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   width: #{mixins.vw(282px)};
 
   @include mixins.mobile {
@@ -389,15 +390,11 @@
 }
 
 .services-hero__experience {
-  /* 2-й ряд сітки: під CTA, вирівняний по лівому краю колонки aside (впритик до кнопки). */
   position: relative;
-  grid-column: 2;
-  grid-row: 2;
-  justify-self: start;
-  align-self: start;
+  flex: 0 0 auto;
   width: #{mixins.vw(230px)};
   height: #{mixins.vw(247px)};
-  margin-top: #{mixins.vw(-14px)};
+  margin-top: #{mixins.vw(20px)};
   /* Правий край гекса = лівий край кнопки (колонка aside). */
   margin-left: #{mixins.vw(-230px)};
   display: flex;
@@ -412,9 +409,6 @@
   z-index: 2;
 
   @include mixins.mobile {
-    grid-column: auto;
-    grid-row: auto;
-    flex: 0 0 auto;
     align-self: flex-end;
     width: #{mixins.mvw(218px)};
     height: #{mixins.mvw(234px)};
